Created TCPSocket and TCPSocketUtil. Implemented CreateSocket and wrapped WSAStartup, Cleanup, and GetLastError.

--- a/Lab2TrojanChat/TrojanChat/TrojanChat.vcxproj.filters
+++ b/Lab2TrojanChat/TrojanChat/TrojanChat.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClInclude Include="Server.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TCPSocket.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TCPSocketUtil.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -39,6 +45,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Server.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TCPSocket.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TCPSocketUtil.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
