--- a/Lab2TrojanChat/TrojanChat/TrojanChat.vcxproj
+++ b/Lab2TrojanChat/TrojanChat/TrojanChat.vcxproj
@@ -81,6 +81,7 @@
     <ClInclude Include="Client.h" />
     <ClInclude Include="Server.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="StringUtils.h" />
     <ClInclude Include="TCPSocket.h" />
     <ClInclude Include="TCPSocketUtil.h" />
     <ClInclude Include="WindowsConsole.h" />
@@ -92,6 +93,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="StringUtils.cpp" />
     <ClCompile Include="TCPSocket.cpp" />
     <ClCompile Include="TCPSocketUtil.cpp" />
     <ClCompile Include="TrojanChat.cpp" />
