Implemented Select. Server can keep track of multiple clients and receive data from them.

--- a/Lab2TrojanChat/TrojanChat/TrojanChat.vcxproj.filters
+++ b/Lab2TrojanChat/TrojanChat/TrojanChat.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="StringUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ClientProxy.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -57,6 +60,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="StringUtils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ClientProxy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
