--- a/Lab3TrojanBlast/TrojanBlastServer/TrojanBlastServer.vcxproj
+++ b/Lab3TrojanBlast/TrojanBlastServer/TrojanBlastServer.vcxproj
@@ -13,6 +13,8 @@
   <ItemGroup>
     <ClCompile Include="Src\Server.cpp" />
     <ClCompile Include="Src\ServerMain.cpp" />
+    <ClCompile Include="Src\ShipServer.cpp" />
+    <ClCompile Include="Src\TommyCoinServer.cpp" />
     <ClCompile Include="Src\TrojanBlastServerPCH.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -20,6 +22,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Inc\Server.h" />
+    <ClInclude Include="Inc\ShipServer.h" />
+    <ClInclude Include="Inc\TommyCoinServer.h" />
     <ClInclude Include="Inc\TrojanBlastServerPCH.h" />
   </ItemGroup>
   <ItemGroup>
