Client sends its name to the Server

--- a/Lab3TrojanBlast/TrojanBlast/TrojanBlast.vcxproj
+++ b/Lab3TrojanBlast/TrojanBlast/TrojanBlast.vcxproj
@@ -359,17 +359,21 @@
     <ClInclude Include="Inc\GameObject.h" />
     <ClInclude Include="Inc\GameObjectRegistry.h" />
     <ClInclude Include="Inc\MathUtils.h" />
+    <ClInclude Include="Inc\PacketBuffer.h" />
     <ClInclude Include="Inc\ScoreBoardManager.h" />
     <ClInclude Include="Inc\Ship.h" />
     <ClInclude Include="Inc\StringUtils.h" />
     <ClInclude Include="Inc\Timing.h" />
     <ClInclude Include="Inc\TommyCoin.h" />
     <ClInclude Include="Inc\TrojanBlastPCH.h" />
+    <ClInclude Include="Inc\UDPSocket.h" />
+    <ClInclude Include="Inc\UDPSocketUtil.h" />
     <ClInclude Include="Inc\World.h" />
     <CLInclude Include="resource.h" />
     <ClCompile Include="Src\Engine.cpp" />
     <ClCompile Include="Src\GameObjectRegistry.cpp" />
     <ClCompile Include="Src\MathUtils.cpp" />
+    <ClCompile Include="Src\PacketBuffer.cpp" />
     <ClCompile Include="Src\ScoreBoardManager.cpp" />
     <ClCompile Include="Src\Ship.cpp" />
     <ClCompile Include="Src\StringUtils.cpp" />
@@ -390,6 +394,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">TrojanBlastPCH.h</PrecompiledHeaderFile>
     </ClCompile>
+    <ClCompile Include="Src\UDPSocket.cpp" />
+    <ClCompile Include="Src\UDPSocketUtil.cpp" />
     <ClCompile Include="Src\World.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Use</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">TrojanBlastPCH.h</PrecompiledHeaderFile>
