--- a/Lab3TrojanBlast/TrojanBlastServer/TrojanBlastServer.vcxproj
+++ b/Lab3TrojanBlast/TrojanBlastServer/TrojanBlastServer.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Src\ClientProxy.cpp" />
     <ClCompile Include="Src\Server.cpp" />
     <ClCompile Include="Src\ServerMain.cpp" />
     <ClCompile Include="Src\ShipServer.cpp" />
@@ -21,6 +22,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Inc\ClientProxy.h" />
     <ClInclude Include="Inc\Server.h" />
     <ClInclude Include="Inc\ShipServer.h" />
     <ClInclude Include="Inc\TommyCoinServer.h" />
