--- a/Lab3TrojanBlast/TrojanBlastServer/TrojanBlastServer.vcxproj.filters
+++ b/Lab3TrojanBlast/TrojanBlastServer/TrojanBlastServer.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Src\ShipServer.cpp">
       <Filter>Src</Filter>
     </ClCompile>
+    <ClCompile Include="Src\ClientProxy.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Inc\TrojanBlastServerPCH.h">
@@ -39,6 +42,9 @@
       <Filter>Inc</Filter>
     </ClInclude>
     <ClInclude Include="Inc\ShipServer.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
+    <ClInclude Include="Inc\ClientProxy.h">
       <Filter>Inc</Filter>
     </ClInclude>
   </ItemGroup>
