--- a/Lab3TrojanBlast/TrojanBlast/TrojanBlast.vcxproj.filters
+++ b/Lab3TrojanBlast/TrojanBlast/TrojanBlast.vcxproj.filters
@@ -58,6 +58,9 @@
     <ClInclude Include="Inc\UDPSocketUtil.h">
       <Filter>Inc</Filter>
     </ClInclude>
+    <ClInclude Include="Inc\InputState.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SimpleSample.rc">
@@ -105,6 +108,9 @@
       <Filter>Src</Filter>
     </ClCompile>
     <ClCompile Include="Src\UDPSocket.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\InputState.cpp">
       <Filter>Src</Filter>
     </ClCompile>
   </ItemGroup>
